--- a/posts/optimization/2025-03-30-intro-network-optimization-julia/index.qmd
+++ b/posts/optimization/2025-03-30-intro-network-optimization-julia/index.qmd
@@ -18,19 +18,7 @@ format-links:
 image: ./img/cover.png
 reading-time: true
 engine: julia
+draft: true
 ---
 
-:::: {.columns}
-
-::: {.column width="80%"}
-The Multi-commodity Capacitated Network Design problem has been studied for multiple
-
-:::
-
-::: {.column width="4%"}
-:::
-
-::: {.column width="15%"}
-![](img/dynamic-graph.html){width=300% height=10cm}
-:::
-::::
+![](img/dynamic-graph.html){width=100% height=10cm}
