adding disclaimer employer

--- a/about.qmd
+++ b/about.qmd
@@ -9,4 +9,4 @@ _Applied Scientist_ since 2019. First, focusing on machine-learning based
 forecasting models, and now focusing on _large scale_ network optimization
 solutions. I am deeply grateful to those who share their knowledge online, as I
 have learned so much from them. I hope that Computational Loops can also
-contribute to helping others in the community.
+contribute to helping others in the community. The opinions expressed herein are solely my own and do not necessarily reflect the views or positions of my employer.
